--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type= "button" onclick="encriptar()" value="Encriptar">
             <input type= "button" onclick="desencriptar()" value="Desencriptar">
         </div>
-        
+        <h3 id="mostrar"></h3>
     </body>
     <footer>
         <h4>Encriptador realizado por Jaider Salas Burgos</h3>
