--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de Texto</title>
-    <script src="/script.js"></script>
+    <script src="https://github.com/JaiderSalas/Text-Encryptor/blob/main/script.js"></script>
 </head>
     <header>
         <h1>
