--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de Texto</title>
-    <script src="/script.js"></script>
+    <script>
+        function encriptar(){
+            var texto = document.querySelector("textarea").value
+            var a = texto.replace(/e/g,"enter")
+            var b = a.replace(/i/g,"imes")
+            var c = b.replace(/a/g,"ai")
+            var d = c.replace(/o/g,"ober")
+            var e = d.replace(/u/g,"ufat")
+            document.getElementById("mostrar").innerHTML = e
+        }
+        function desencriptar(){
+            var texto = document.querySelector("textarea").value
+            var a = texto.replace(/enter/g,"e")
+            var b = a.replace(/imes/g,"i")
+            var c = b.replace(/ai/g,"a")
+            var d = c.replace(/ober/g,"o")
+            var e = d.replace(/ufat/g,"u")
+            document.getElementById("mostrar").innerHTML = e
+        }
+    </script>
 </head>
     <header>
         <h1>
