--- a/index.html
+++ b/index.html
@@ -94,12 +94,8 @@
         <input type="button" onclick="desencriptar()" value="Desencriptar">
     </div>
     <h3 id="mostrar"></h3>
-    <footer>
-        <h4>Encriptador realizado por Jaider Salas Burgos</h4>
-    </footer>
 </body>
-</html>
     <footer>
-        <h4>Encriptador realizado por Jaider Salas Burgos</h3>
+        <h4>Encriptador</h3>
     </footer>
 </html>
